apps/guacamole/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: guacamole-rewrite
  namespace: infra
spec:
  replacePathRegex:
    regex: ^/(.*)
    replacement: /guacamole/$1
