apps/guacamole/deployment-guacamole.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guacamole
  namespace: apps
  labels:
    app.kubernetes.io/name: guacamole
    app.kubernetes.io/part-of: guacamole
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: guacamole
  template:
    metadata:
      labels:
        app: guacamole
        app.kubernetes.io/name: guacamole
        app.kubernetes.io/part-of: guacamole
    spec:
      enableServiceLinks: false
      containers:
        - name: guacamole
          image: guacamole/guacamole:1.6.0
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /guacamole/
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /guacamole/
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 30
          resources:
            requests:
              cpu: "50m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "512Mi"
