apps/guacamole/deployment-guacd.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guacd
  namespace: apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: guacd
  template:
    metadata:
      labels:
        app: guacd
    spec:
      containers:
        - name: guacd
          image: guacamole/guacd:1.5.5
          ports:
            - containerPort: 4822
          volumeMounts:
            - name: guacamole-guacd
              mountPath: /etc/guacamole
          resources:
            requests:
              cpu: "50m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "512Mi"
      volumes:
        - name: guacamole-guacd
          persistentVolumeClaim:
            claimName: guacamole-guacd-pvc
