apps/guacamole/service-guacamole.yaml
apiVersion: v1
kind: Service
metadata:
  name: guacamole
  namespace: apps
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app: guacamole
  type: ClusterIP
